[gd_scene load_steps=2 format=3 uid="uid://b4i855kcett3h"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_srtwx"]

[node name="Pause Menu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_srtwx")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.735969, 0.570337, 0.566538, 1)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 8

[node name="lblPause" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Pause"

[node name="btnResume" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Resume"

[node name="btnmain" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Main Menu"

[node name="btnQuit" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="GridContainer/btnResume" to="." method="_on_btn_resume_pressed"]
[connection signal="pressed" from="GridContainer/btnmain" to="." method="_on_btnmain_pressed"]
[connection signal="pressed" from="GridContainer/btnQuit" to="." method="_on_btn_quit_pressed"]
